{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 431,
  "lineage": "ca418ed4-e590-44fc-21a0-2781a2221dce",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:079825609440:security-group/sg-0be764834d03c3ee2",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0be764834d03c3ee2",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "172.16.0.0/12",
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "all_worker_management20211008091513239800000009",
            "name_prefix": "all_worker_management",
            "owner_id": "079825609440",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06fb76e1400c39479"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:079825609440:security-group/sg-0ee7d2935ef5e7f81",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0ee7d2935ef5e7f81",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_one20211008091513239500000008",
            "name_prefix": "worker_group_mgmt_one",
            "owner_id": "079825609440",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06fb76e1400c39479"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:079825609440:security-group/sg-04243dad6a10c88c0",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-04243dad6a10c88c0",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_two20211008091513239300000007",
            "name_prefix": "worker_group_mgmt_two",
            "owner_id": "079825609440",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06fb76e1400c39479"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:079825609440:security-group/sg-07c33a99e76d090fd",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-07c33a99e76d090fd",
            "ingress": [],
            "name": "cluster-ayushsbankuno-8Jy5fNo32021100809151707720000000a",
            "name_prefix": "cluster-ayushsbankuno-8Jy5fNo3",
            "owner_id": "079825609440",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "cluster-ayushsbankuno-8Jy5fNo3-eks_cluster_sg",
              "Project": "ayushsbankuno"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "cluster-ayushsbankuno-8Jy5fNo3-eks_cluster_sg",
              "Project": "ayushsbankuno"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fb76e1400c39479"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:079825609440:security-group/sg-0a289a2980b23eaa4",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-0a289a2980b23eaa4",
            "ingress": [],
            "name": "cluster-ayushsbankuno-8Jy5fNo32021100809151721940000000b",
            "name_prefix": "cluster-ayushsbankuno-8Jy5fNo3",
            "owner_id": "079825609440",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "cluster-ayushsbankuno-8Jy5fNo3-eks_worker_sg",
              "Project": "ayushsbankuno",
              "kubernetes.io/cluster/cluster-ayushsbankuno-8Jy5fNo3": "owned"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "cluster-ayushsbankuno-8Jy5fNo3-eks_worker_sg",
              "Project": "ayushsbankuno",
              "kubernetes.io/cluster/cluster-ayushsbankuno-8Jy5fNo3": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fb76e1400c39479"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-3441393610",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-07c33a99e76d090fd",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-970907984",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07c33a99e76d090fd",
            "self": false,
            "source_security_group_id": "sg-0a289a2980b23eaa4",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-2258862155",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0a289a2980b23eaa4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-2128441645",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a289a2980b23eaa4",
            "self": false,
            "source_security_group_id": "sg-07c33a99e76d090fd",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-1278300359",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a289a2980b23eaa4",
            "self": false,
            "source_security_group_id": "sg-07c33a99e76d090fd",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-1633091757",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0a289a2980b23eaa4",
            "self": false,
            "source_security_group_id": "sg-0a289a2980b23eaa4",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-80f61e9b",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-54-193-221-150.us-west-1.compute.amazonaws.com",
            "public_ip": "54.193.221.150",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-ayushsbankuno-us-west-1a",
              "Project": "ayushsbankuno",
              "kubernetes.io/cluster/cluster-ayushsbankuno-8Jy5fNo3": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-ayushsbankuno-us-west-1a",
              "Project": "ayushsbankuno",
              "kubernetes.io/cluster/cluster-ayushsbankuno-8Jy5fNo3": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:079825609440:internet-gateway/igw-0403e0309389507ce",
            "id": "igw-0403e0309389507ce",
            "owner_id": "079825609440",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-ayushsbankuno",
              "Project": "ayushsbankuno",
              "kubernetes.io/cluster/cluster-ayushsbankuno-8Jy5fNo3": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-ayushsbankuno",
              "Project": "ayushsbankuno",
              "kubernetes.io/cluster/cluster-ayushsbankuno-8Jy5fNo3": "shared"
            },
            "vpc_id": "vpc-06fb76e1400c39479"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-80f61e9b",
            "connectivity_type": "public",
            "id": "nat-0492fea84e8af8a60",
            "network_interface_id": "eni-0415537f0f50865d9",
            "private_ip": "172.16.8.202",
            "public_ip": "54.193.221.150",
            "subnet_id": "subnet-03e0a4764c6ba7711",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-ayushsbankuno-us-west-1a",
              "Project": "ayushsbankuno",
              "kubernetes.io/cluster/cluster-ayushsbankuno-8Jy5fNo3": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-ayushsbankuno-us-west-1a",
              "Project": "ayushsbankuno",
              "kubernetes.io/cluster/cluster-ayushsbankuno-8Jy5fNo3": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-084acfe113bdab6141080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0492fea84e8af8a60",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-084acfe113bdab614",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0403e0309389507ce",
            "id": "r-rtb-03bc2071c77422a771080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03bc2071c77422a77",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:079825609440:route-table/rtb-084acfe113bdab614",
            "id": "rtb-084acfe113bdab614",
            "owner_id": "079825609440",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-ayushsbankuno-private",
              "Project": "ayushsbankuno",
              "kubernetes.io/cluster/cluster-ayushsbankuno-8Jy5fNo3": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-ayushsbankuno-private",
              "Project": "ayushsbankuno",
              "kubernetes.io/cluster/cluster-ayushsbankuno-8Jy5fNo3": "shared"
            },
            "vpc_id": "vpc-06fb76e1400c39479"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:079825609440:route-table/rtb-03bc2071c77422a77",
            "id": "rtb-03bc2071c77422a77",
            "owner_id": "079825609440",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-ayushsbankuno-public",
              "Project": "ayushsbankuno",
              "kubernetes.io/cluster/cluster-ayushsbankuno-8Jy5fNo3": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-ayushsbankuno-public",
              "Project": "ayushsbankuno",
              "kubernetes.io/cluster/cluster-ayushsbankuno-8Jy5fNo3": "shared"
            },
            "vpc_id": "vpc-06fb76e1400c39479"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dedf39ea373b5e99",
            "route_table_id": "rtb-084acfe113bdab614",
            "subnet_id": "subnet-00ab12afb41887b73"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041caee05a4ae995a",
            "route_table_id": "rtb-084acfe113bdab614",
            "subnet_id": "subnet-069a263b94dfbe5bb"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0118821f81f4a2097",
            "route_table_id": "rtb-084acfe113bdab614",
            "subnet_id": "subnet-04d17589c7e6597af"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014f17d07af29c479",
            "route_table_id": "rtb-03bc2071c77422a77",
            "subnet_id": "subnet-03e0a4764c6ba7711"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038553b2379975e4b",
            "route_table_id": "rtb-03bc2071c77422a77",
            "subnet_id": "subnet-0c6c4740547990c5a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0831d0d955526dadb",
            "route_table_id": "rtb-03bc2071c77422a77",
            "subnet_id": "subnet-01a45d4437419a6db"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:079825609440:subnet/subnet-00ab12afb41887b73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "172.16.8.0/26",
            "id": "subnet-00ab12afb41887b73",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "079825609440",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-ayushsbankuno-private-us-west-1a",
              "Project": "ayushsbankuno",
              "kubernetes.io/cluster/cluster-ayushsbankuno-8Jy5fNo3": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-ayushsbankuno-private-us-west-1a",
              "Project": "ayushsbankuno",
              "kubernetes.io/cluster/cluster-ayushsbankuno-8Jy5fNo3": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-06fb76e1400c39479"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:079825609440:subnet/subnet-069a263b94dfbe5bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.16.8.64/26",
            "id": "subnet-069a263b94dfbe5bb",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "079825609440",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-ayushsbankuno-private-us-west-1c",
              "Project": "ayushsbankuno",
              "kubernetes.io/cluster/cluster-ayushsbankuno-8Jy5fNo3": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-ayushsbankuno-private-us-west-1c",
              "Project": "ayushsbankuno",
              "kubernetes.io/cluster/cluster-ayushsbankuno-8Jy5fNo3": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-06fb76e1400c39479"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:079825609440:subnet/subnet-04d17589c7e6597af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "172.16.8.128/26",
            "id": "subnet-04d17589c7e6597af",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "079825609440",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-ayushsbankuno-private-us-west-1a",
              "Project": "ayushsbankuno",
              "kubernetes.io/cluster/cluster-ayushsbankuno-8Jy5fNo3": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-ayushsbankuno-private-us-west-1a",
              "Project": "ayushsbankuno",
              "kubernetes.io/cluster/cluster-ayushsbankuno-8Jy5fNo3": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-06fb76e1400c39479"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:079825609440:subnet/subnet-03e0a4764c6ba7711",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "172.16.8.192/26",
            "id": "subnet-03e0a4764c6ba7711",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "079825609440",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-ayushsbankuno-public-us-west-1a",
              "Project": "ayushsbankuno",
              "kubernetes.io/cluster/cluster-ayushsbankuno-8Jy5fNo3": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-ayushsbankuno-public-us-west-1a",
              "Project": "ayushsbankuno",
              "kubernetes.io/cluster/cluster-ayushsbankuno-8Jy5fNo3": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-06fb76e1400c39479"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:079825609440:subnet/subnet-0c6c4740547990c5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.16.9.0/26",
            "id": "subnet-0c6c4740547990c5a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "079825609440",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-ayushsbankuno-public-us-west-1c",
              "Project": "ayushsbankuno",
              "kubernetes.io/cluster/cluster-ayushsbankuno-8Jy5fNo3": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-ayushsbankuno-public-us-west-1c",
              "Project": "ayushsbankuno",
              "kubernetes.io/cluster/cluster-ayushsbankuno-8Jy5fNo3": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-06fb76e1400c39479"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:079825609440:subnet/subnet-01a45d4437419a6db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "172.16.9.64/26",
            "id": "subnet-01a45d4437419a6db",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "079825609440",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-ayushsbankuno-public-us-west-1a",
              "Project": "ayushsbankuno",
              "kubernetes.io/cluster/cluster-ayushsbankuno-8Jy5fNo3": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-ayushsbankuno-public-us-west-1a",
              "Project": "ayushsbankuno",
              "kubernetes.io/cluster/cluster-ayushsbankuno-8Jy5fNo3": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-06fb76e1400c39479"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:079825609440:vpc/vpc-06fb76e1400c39479",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.8.0/22",
            "default_network_acl_id": "acl-0a16c1dc05420eab6",
            "default_route_table_id": "rtb-0a017733f97ad9dfb",
            "default_security_group_id": "sg-038fd2d616fb7bb16",
            "dhcp_options_id": "dopt-677dbe01",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06fb76e1400c39479",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a017733f97ad9dfb",
            "owner_id": "079825609440",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-ayushsbankuno",
              "Project": "ayushsbankuno",
              "kubernetes.io/cluster/cluster-ayushsbankuno-8Jy5fNo3": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-ayushsbankuno",
              "Project": "ayushsbankuno",
              "kubernetes.io/cluster/cluster-ayushsbankuno-8Jy5fNo3": "shared"
            }
          },
          "dependencies": [
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}